k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lobby-service
  namespace: default
spec:
  selector:
    app: lobby # Assurez-vous que cela correspond aux sélecteurs de votre déploiement
  ports:
  - protocol: TCP
    port: 80 # Le port sur lequel le service sera accessible à l'intérieur du cluster
    targetPort: 80 # Le port que votre application écoute à l'intérieur du conteneur
  type: ClusterIP # Utilisez NodePort ou LoadBalancer si vous avez besoin d'exposer ce service en dehors du cluster
